--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Hoonchan Yoon # the main title
 tagline: Developer # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  윤훈찬, Hoonchan Yoon, Tony Yoon, 윤훈찬의 블로그, Dentist Developer, Recipe, Books, Startups, Algorithms
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -29,7 +29,7 @@ github:
   username: hoonchany99 # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: username # change to your twitter username
 
 social:
   # Change to your full name.
@@ -61,7 +61,7 @@ analytics:
   google:
     id: # fill in your Google Analytics ID
   goatcounter:
-    id: # fill in your GoatCounter ID
+    id: hoonchany99
   umami:
     id: # fill in your Umami ID
     domain: # fill in your Umami domain
@@ -73,7 +73,7 @@ analytics:
 
 # Pageviews settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: goatcounter
 
 # Prefer color scheme setting.
 #
